fix: sidebar spacing
- update styles
- remove unnecessary script tag

--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -5,6 +5,10 @@
   height: 100%;
   padding: size(32);
 
+  display: flex;
+  flex-direction: column;
+  gap: size(32);
+
   @include mq(medium) {
     width: fit-content;
   }
